# gymcoachai

./: .env.local.example  .gitignore  ACCESSIBILITY_FIXES_APPLIED.md  AI_CONTEXT_DEBUGGING.md  AI_OPTIMIZATION_EXECUTIVE_SUMMARY.md  AI_PERSONALIZATION_COMPLETE_SUMMARY.md  AI_PERSONALIZATION_ENHANCEMENT.md  AI_SERVICE_CACHING_IMPLEMENTATION.md  AI_SERVICE_OPTIMIZATION_PLAN.md  AI_WORKOUT_PLAN_CREATOR_ARCHITECTURE.md  AI_WORKOUT_PLAN_CREATOR_COMPLETE_SUMMARY.md  AI_WORKOUT_PLAN_CREATOR_IMPLEMENTATION.md  AI_WORKOUT_PLAN_CREATOR_QUICK_REFERENCE.md  ANALYTICS_COMPILATION_STATUS.md  ANALYTICS_ENHANCEMENT_COMPLETE.md  API_FIXES_DETAILED_SUMMARY.md  API_FIXES_SUMMARY.md  ARCHITECTURE_DIAGRAMS.md  BEDROCK_MODEL_FIX.md  CACHE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_DASHBOARD_SUMMARY.md  CORS_ISSUES_RESOLUTION.md  Cargo.toml  DEPLOY_NOW.md  ENHANCED_ANALYTICS_SUMMARY.md  FIREBASE_TEST_SUMMARY.md  FRONTEND_API_INTEGRATION_STATUS.md  IMPLEMENTATION_COMPLETE.md  MEMORY_SERVICE_ANALYSIS.md  MEMORY_SERVICE_FIXES_APPLIED.md  MOBILE_ACCESSIBILITY_BUGS_REPORT.md  MOBILE_AI_WORKOUT_PLAN_CREATOR.md  MOBILE_AI_WORKOUT_PLAN_CREATOR_QUICK_START.md  MOBILE_APP_BACKEND_COMPATIBILITY.md  MOBILE_APP_FIXES.md  MOBILE_APP_FIXES_COMPLETE.md  MOBILE_APP_IMPLEMENTATION_SUMMARY.md  MOBILE_APP_QA_TEST_PLAN.md  MOBILE_BUG_FIXES_IMPLEMENTATION.md  MOBILE_DAILY_GOALS_IMPLEMENTATION_SUMMARY.md  (+34 more)
GymCoachClean/: ENV_SYNC_COMPLETE.md  FIREBASE_FIX_SUMMARY.md  FIREBASE_SETUP_GUIDE.md  ICON_SETUP.md  IMMEDIATE_FIXES_REQUIRED.md  MOBILE_APP_FIXES_SUMMARY.md  MOBILE_APP_QA_FINAL_REPORT.md  PROFILE_PROGRESS_PHOTOS_IMPLEMENTATION.md  PROJECT_SUCCESS_SUMMARY.md  QUICK_TESTING_GUIDE.md  SQA_CRITICAL_TESTING_REPORT.md  app.json  babel.config.js  index.js  metro.config.js  package-lock.json  package.json
docs/: COST_OPTIMIZED_MONITORING.md  api-integration-goals-preferences.md  backend-frontend-sync-completion.md  backend-frontend-sync-requirements.md  browse-templates-404-fix.md  create-plan-button-fix.md  database-schema.md  enhanced-analytics-system.md  lambda-optimization.md  monitoring-and-logging.md  performance-optimization.md  phase3-validation-summary.md  s3-storage-configuration.md  security-implementation.md  static-export-locale-handling.md  user-profile-daily-goals-update.md  (+1 more)
infrastructure/: QUICK_DEPLOY.md  (+7 more)
services/analytics-service/: API_ROUTES.md  Cargo.toml  REFACTORING_SUMMARY.md  fix-compilation.sh  test  test.rs
services/analytics-service/src/: database.rs  enhanced_database.rs  enhanced_handlers.rs  enhanced_handlers_backup.rs  enhanced_handlers_corrupted.rs  handlers.rs  main.rs  models.rs  models_backup.rs  models_clean.rs
services/analytics-service/src/controller/: achievement_controller.rs  body_measurement_controller.rs  milestone_controller.rs  mod.rs  performance_trend_controller.rs  progress_chart_controller.rs  progress_photo_controller.rs  strength_progress_controller.rs  workout_analytics_controller.rs
services/analytics-service/src/repository/: achievement_repository.rs  body_measurement_repository.rs  milestone_repository.rs  mod.rs  performance_trend_repository.rs  progress_chart_repository.rs  progress_photo_repository.rs  strength_progress_repository.rs  workout_session_repository.rs
services/analytics-service/src/service/: achievement_service.rs  analytics_service.rs  body_measurement_service.rs  milestone_service.rs  mod.rs  performance_trend_service.rs  progress_chart_service.rs  progress_photo_service.rs  strength_progress_service.rs  workout_session_service.rs
services/analytics-service/src/utils/: data_helper.rs  mod.rs  response.rs  routing.rs
services/auth-layer/: Cargo.toml
services/auth-layer/layer/opt/auth/: README
services/auth-layer/src/: lib.rs  main.rs
services/notification-scheduler/: Cargo.toml
services/notification-scheduler/src/: main.rs
services/notification-sender/: Cargo.toml
services/notification-sender/src/: main.rs
services/notification-service/: API_ROUTES.md  Cargo.toml  REFACTORING_SUMMARY.md
services/notification-service/src/: handlers.rs  main.rs  models.rs  services.rs  utils.rs
services/nutrition-service/: Cargo.toml  PUSH_NOTIFICATIONS_IMPLEMENTATION.md
services/nutrition-service/src/: database.rs  handlers.rs  main.rs  models.rs
services/nutrition-service/src/controller/: favorite_controller.rs  food_controller.rs  meal_controller.rs  mod.rs  nutrition_plan_controller.rs  nutrition_stats_controller.rs  water_controller.rs
services/nutrition-service/src/repository/: favorite_repository.rs  food_repository.rs  meal_repository.rs  mod.rs  nutrition_plan_repository.rs  water_repository.rs
services/nutrition-service/src/service/: favorite_service.rs  food_service.rs  meal_service.rs  mod.rs  nutrition_plan_service.rs  nutrition_stats_service.rs  water_service.rs
services/nutrition-service/src/utils/: mod.rs  response.rs  routing.rs
services/shared-logging/: Cargo.toml
services/shared-logging/src/: lib.rs
services/user-service/: Cargo.toml
services/user-service/src/: database.rs  handlers.rs  main.rs  models.rs
services/workout-service/: API_ROUTES.md  Cargo.toml  REFACTORING_SUMMARY.md
services/workout-service/src/: database.rs  handlers.rs  main.rs  models.rs
services/workout-service/src/controller/: exercise_controller.rs  mod.rs  scheduled_workout_controller.rs  workout_analytics_controller.rs  workout_plan_controller.rs  workout_session_controller.rs
services/workout-service/src/repository/: exercise_repository.rs  mod.rs  scheduled_workout_repository.rs  workout_analytics_repository.rs  workout_plan_repository.rs  workout_session_repository.rs
services/workout-service/src/service/: exercise_service.rs  mod.rs  scheduled_workout_service.rs  workout_analytics_service.rs  workout_plan_service.rs  workout_session_service.rs
services/workout-service/src/utils/: constants.rs  data_helper.rs  error.rs  http.rs  mod.rs  response.rs  routing.rs  validation.rs
tests/rust-tests/: Cargo.toml  README.md
tests/rust-tests/src/: e2e_tests.rs  integration_tests.rs  lib.rs  main.rs  unit_tests.rs  validation_tests.rs
(+444 files in other folders)
