[workspace]
members = [
    "services/analytics-service",
    "services/auth-layer",
    "services/coaching-service",
    "services/metrics-collector",
    "services/notification-service",
    "services/notification-scheduler",
    "services/nutrition-service",
    "services/performance-optimizer",
    "services/security-middleware",
    "services/shared-logging",
    "services/user-profile-service",
    "services/user-service",
    "services/workout-service",
    "tests/rust-tests",
]

resolver = "2"

[workspace.dependencies]
lambda_runtime = "0.14"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-sdk-sns = "1.0"
aws-sdk-lambda = "1.0"
aws-config = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
base64 = "0.22"
aws_lambda_events = "0.15"
urlencoding = "2.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
