[package]
name = "notification-scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-lambda = { workspace = true }
aws-config = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = "1.0"

[[bin]]
name = "notification-scheduler"
path = "src/main.rs"
