[package]
name = "notification-sender"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-config = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }

[[bin]]
name = "notification-sender"
path = "src/main.rs"
