[package]
name = "notification-service"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.8"
lambda-router = { path = "../../packages/lambda-router" }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-sns = { workspace = true }
aws-config = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
validator = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
auth-layer = { path = "../auth-layer" }
once_cell = "1.0"
reqwest = { workspace = true }
base64 = "0.21"
jsonwebtoken = "8.3"

[[bin]]
name = "notification-service"
path = "src/main.rs"
