[package]
name = "nutrition-service"
version = "0.1.0"
edition = "2021"

# Note: TypeScript configuration for this service is located at ../../packages/tsconfig/lambda.json

[dependencies]
lambda_runtime = "0.8"
lambda-router = { path = "../../packages/lambda-router" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros", "net", "io-util", "time"] }
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
auth-layer = { path = "../auth-layer" }
once_cell = "1.0"
async-trait = "0.1"

[profile.release]
opt-level = "z"  # Optimize for size
lto = true       # Link-time optimization
codegen-units = 1
panic = "abort"
strip = true
# Additional size optimizations
[profile.release.package."*"]
opt-level = "z"
