[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

# Note: TypeScript configuration for this service is located at ../../packages/tsconfig/lambda.json

[dependencies]
lambda_runtime = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
