[package]
name = "workout-service"
version = "0.1.0"
edition = "2021"

# Note: TypeScript configuration for this service is located at ../../packages/tsconfig/lambda.json

[dependencies]
lambda_runtime = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_dynamo = "4.0"
tokio = { version = "1.0", features = ["full"] }
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.19"
auth-layer = { path = "../auth-layer" }
urlencoding = "2.1"