[package]
name = "gymcoach-ai-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
lambda_runtime = "0.8"
aws-sdk-dynamodb = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# Test dependencies
[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.0"

[[test]]
name = "unit_tests"
path = "src/unit_tests.rs"

[[test]]
name = "integration_tests"
path = "src/integration_tests.rs"

[[test]]
name = "e2e_tests"
path = "src/e2e_tests.rs"

[[test]]
name = "validation_tests"
path = "src/validation_tests.rs"
